--- a/ShelterEvidency/Views/HomeView.xaml
+++ b/ShelterEvidency/Views/HomeView.xaml
@@ -10,7 +10,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="HomeView" Height="800" Width="1200" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="Shelter Evidency" Height="1000" Width="1800" WindowStartupLocation="CenterScreen" WindowState="Maximized" Icon="/ShelterEvidency;component/Graphics/icon.png">
 
     <Window.Resources>
         <Storyboard x:Key="OpenMenu">
@@ -26,8 +26,22 @@
             </DoubleAnimationUsingKeyFrames>
         </Storyboard>
 
-        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
-        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+            <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+            <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+
+            <Style x:Key="CellCentering" TargetType="{x:Type DataGridCell}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type DataGridCell}">
+                            <Grid Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Left" Margin="15,0,0,0" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+
 
 
     </Window.Resources>
@@ -85,11 +99,26 @@
                               Poslední přijatá zvířata
                             </TextBlock>
 
-                            
-                                <ListView >
 
-                                </ListView>
-                            
+                            <DataGrid Grid.Row="1" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True" CellStyle="{StaticResource CellCentering}" VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" ItemsSource="{Binding Path=LastAnimals, Mode=OneWay}">
+                                <DataGrid.Columns>
+                                    <DataGridTemplateColumn Width="120" Header="Obrázek">
+                                        <DataGridTemplateColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <Grid Width="80" Height="80">
+                                                    <Image Source="{Binding ImagePath}" VerticalAlignment="Center" HorizontalAlignment="Center" Stretch="UniformToFill" />
+                                                </Grid>
+                                            </DataTemplate>
+                                        </DataGridTemplateColumn.CellTemplate>
+                                    </DataGridTemplateColumn>
+                                    <DataGridTextColumn MaxWidth="50" Header="ID" Binding="{Binding ID}"/>
+                                    <DataGridTextColumn Header="Jméno" Binding="{Binding Name}"/>
+                                    <DataGridTextColumn Header="Číslo čipu" Binding="{Binding ChipNumber}"/>
+                                    <DataGridTextColumn Header="Pohlaví" Binding="{Binding Sex}"/>
+
+                                </DataGrid.Columns>
+                            </DataGrid>
+
 
                         </Grid>
                     </materialDesign:Card>
@@ -102,22 +131,34 @@
                                 <RowDefinition/>
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
-                            <materialDesign:Card Margin="15" Width="180" Height="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"
+
+                            <StackPanel>
+
+
+                                <TextBlock VerticalAlignment="Bottom" x:Name="ShelterName" TextAlignment="Center" TextWrapping="Wrap"
+    Style="{StaticResource MaterialDesignHeadline3TextBlock}" Margin="15,15,15,0"/>
+
+
+                                <materialDesign:Card Margin="15,15,15,60" MaxWidth="180" Height="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"
                     materialDesign:ShadowAssist.ShadowDepth="Depth5" UniformCornerRadius="400">
-                                <Image Source="/Graphics/logo-loz.jpg" Stretch="UniformToFill" HorizontalAlignment="Center" VerticalAlignment="Center" Width="195" Height="190"></Image>
-                            </materialDesign:Card>
+                                    <Image Source="/Graphics/logo-loz.jpg" Stretch="UniformToFill" HorizontalAlignment="Center" VerticalAlignment="Center" Width="195" Height="190"/>
+                                </materialDesign:Card>
+
+                            </StackPanel>
+                            
+
                             <StackPanel Margin="40, 0" Grid.Row="1">
                                 <TextBox x:Name="ShelterPhone" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Telefon útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
-                                <TextBox x:Name="EmergencyPhone" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Pohotovost útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                                <TextBox x:Name="ShelterEmergencyPhone" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Pohotovost útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
                                 <TextBox x:Name="ShelterMail" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="E-mail útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
-                                <TextBox x:Name="ShelteAdress" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Adresa útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
-                                <TextBox x:Name="ShelteAccount" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Číslo účtu útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                                <TextBox x:Name="ShelterAdress" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Adresa útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                                <TextBox x:Name="ShelterAccount" VerticalAlignment="Center" IsReadOnly="True" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Číslo účtu útulku" TextWrapping="Wrap" Margin="5" Padding="2"/>
 
 
                             </StackPanel>
 
                         </Grid>
-                        
+
                     </materialDesign:Card>
 
                     <materialDesign:Card Margin="20" Grid.ColumnSpan="3" Grid.Row="4" Grid.RowSpan="2"
@@ -147,20 +188,39 @@
                                 <materialDesign:PackIcon Grid.Row="1" Kind="CashMinus" VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="80" Opacity="0.5" />
 
                                 <TextBlock x:Name="DatedCosts" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"
-    Style="{StaticResource MaterialDesignHeadline4TextBlock}">
-                                    xxx
-
-                                </TextBlock>
+    Style="{StaticResource MaterialDesignHeadline4TextBlock}"></TextBlock>
 
                             </Grid>
 
 
 
+                            <Grid Grid.Row="1" Grid.ColumnSpan="2" Margin="0,15,0,0" >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="80"/>
+                                </Grid.ColumnDefinitions>
 
-                            <DatePicker Grid.Row="1"
-                              Width="140"
+                                <DatePicker
+                              Width="140" SelectedDate="{Binding Path=Since, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"
                               materialDesign:HintAssist.Hint="Od data"
                               Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
+
+                                <DatePicker  Grid.Column="1"
+                              Width="140" SelectedDate="{Binding Path=To, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"
+                              materialDesign:HintAssist.Hint="Do data"
+                              Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
+
+                                <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
+                                x:Name="Filter" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
+                                                    <materialDesign:PackIcon
+                                Kind="Update"
+                                Height="30"
+                                Width="30" />
+                                </Button>
+                            </Grid>
+
+                           
 
                             <Grid Grid.Column="1">
                                 <Grid.RowDefinitions>
@@ -176,18 +236,14 @@
                                 <materialDesign:PackIcon Grid.Row="1" Kind="CashPlus" VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="80" Opacity="0.5" />
 
                                 <TextBlock x:Name="DatedDonations" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"
-    Style="{StaticResource MaterialDesignHeadline4TextBlock}">
-                                    xxx
-
+                                    Style="{StaticResource MaterialDesignHeadline4TextBlock}">
                                 </TextBlock>
+                                
 
                             </Grid>
 
 
-                            <DatePicker Grid.Row="1" Grid.Column="1"
-                              Width="140"
-                              materialDesign:HintAssist.Hint="Do data"
-                              Style="{StaticResource MaterialDesignOutlinedDatePicker}" />
+                            
                         </Grid>
 
                     </materialDesign:Card>
@@ -205,16 +261,20 @@
                                 <materialDesign:PackIcon Kind="HouseMapMarker" HorizontalAlignment="Center" VerticalAlignment="Center" Width="60" Height="60" />
                             </materialDesign:Card>
 
-                            <StackPanel Grid.Row="1">
-                                <TextBlock TextWrapping="Wrap" TextAlignment="Center"
+                            <Grid Grid.Row="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" VerticalAlignment="Center"
                                 Style="{StaticResource MaterialDesignHeadline5TextBlock}">
                               Počet úspěšných adopcí
                                 </TextBlock>
-                                <TextBlock x:Name="AdoptionCount"
+                                <TextBlock x:Name="AdoptionCount" VerticalAlignment="Top" Grid.Row="1" TextAlignment="Center"
                                         Style="{StaticResource MaterialDesignHeadline3TextBlock}">
 
                                 </TextBlock>
-                            </StackPanel>
+                            </Grid>
                         </Grid>
 
                     </materialDesign:Card>
@@ -230,19 +290,19 @@
                                 <materialDesign:Card Background="{DynamicResource PrimaryHueMidBrush}" Width="60" Height="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"
                     materialDesign:ShadowAssist.ShadowDepth="Depth5" UniformCornerRadius="250"
                     >
-                                <materialDesign:PackIcon Kind="Dog" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Height="50" />
-                            </materialDesign:Card>
-                            <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center"
+                                    <materialDesign:PackIcon Kind="Dog" HorizontalAlignment="Center" VerticalAlignment="Center" Width="50" Height="50" />
+                                </materialDesign:Card>
+                                <TextBlock VerticalAlignment="Bottom" HorizontalAlignment="Center"
     Style="{StaticResource MaterialDesignBody1TextBlock}">                                 
                                 V útulku
-                            </TextBlock>
+                                </TextBlock>
                             </StackPanel>
 
 
                             <TextBlock x:Name="AnimalCount"  Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
                                         Style="{StaticResource MaterialDesignHeadline3TextBlock}">
 
-                                </TextBlock>
+                            </TextBlock>
 
                         </Grid>
                     </materialDesign:Card>
@@ -263,9 +323,14 @@
                                         Style="{StaticResource MaterialDesignHeadline6TextBlock}">
                               Plánované procházky
                             </TextBlock>
-                            <ListBox Grid.ColumnSpan="2" Grid.Row="1" Margin="10">
-                                
-                            </ListBox>
+
+                            <DataGrid Grid.Row="1" Grid.ColumnSpan="2" Margin="10" ColumnWidth="*" AutoGenerateColumns="False"  VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" ItemsSource="{Binding Path=PlannedWalks, Mode=OneWay}">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Datum" Binding="{Binding Date, StringFormat=\{0:dd.MM.yyyy\}}"/>
+                                    <DataGridTextColumn Header="Zvíře" Binding="{Binding AnimalName}"/>
+                                    <DataGridTextColumn Header="Venčitel" Binding="{Binding PersonName}"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
 
                         </Grid>
                     </materialDesign:Card>
@@ -273,8 +338,8 @@
 
 
                 </Grid>
-                
-                
+
+
                 <ContentControl x:Name="ActiveItem"/>
             </Grid>
 
@@ -289,22 +354,30 @@
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <TextBox x:Name="DiaryRecord" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Přidat poznámku na vybrané datum"  Text="{Binding Path=DiaryRecord, Mode=TwoWay}" FontSize="14"/>
-                            <Button x:Name="CreateDiaryRecord" Width="25" Height="25" Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Grid.Column="1">
+                        <Button x:Name="CreateDiaryRecord" Width="25" Height="25" Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Grid.Column="1">
                             <materialDesign:PackIcon
                                 Kind="Plus"
                                 Height="20"
                                 Width="20" />
                         </Button>
                     </Grid>
-                    
-                <TextBlock Margin="10" DockPanel.Dock="Top" Style="{StaticResource MaterialDesignHeadline6TextBlock}">Poznámky:</TextBlock>
-                <DataGrid Margin="10" ItemsSource="{Binding Path=RecordList, Mode=OneWay}" VerticalAlignment="Stretch" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" AutoGenerateColumns="False">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Datum" Binding="{Binding Date, StringFormat=\{0:dd.MM.yyyy\}}"/>
-                        <DataGridTextColumn Header="Záznam" Binding="{Binding Record}"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </DockPanel>
+
+                    <TextBlock Margin="10" DockPanel.Dock="Top" Style="{StaticResource MaterialDesignHeadline6TextBlock}">Poznámky:</TextBlock>
+                    <DataGrid Margin="10" ItemsSource="{Binding Path=RecordList, Mode=OneWay}" VerticalAlignment="Stretch" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Datum" Binding="{Binding Date, StringFormat=\{0:dd.MM.yyyy\}}"/>
+
+                            <DataGridTextColumn Header="Záznam" Width="*" Binding="{Binding Record}">
+                                <DataGridTextColumn.ElementStyle>
+                                    <Style>
+                                        <Setter Property="TextBlock.TextWrapping" Value="Wrap" />
+                                    </Style>
+                                </DataGridTextColumn.ElementStyle>
+                            </DataGridTextColumn>
+
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </DockPanel>
             </materialDesign:Card>
 
             <materialDesign:ColorZone Mode="Accent" Grid.Row="0" Grid.ColumnSpan="2" Height="60" materialDesign:ShadowAssist.ShadowDepth="Depth2">
@@ -325,7 +398,7 @@
 
 
                     </StackPanel>
-            </Grid>
+                </Grid>
             </materialDesign:ColorZone>
 
 
